#                    "Merged from", "Cleanup"                                  #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

TB-2009-05-13-0: Cleanup:    Hedeby:
                             Reduced verbosity of output of Hedeby startup and
                             shutdown (51/52), e.g. used in jvms_stress_test
                 Review:     RH

CR-2009-05-12-1: Cleanup:    o test for issue 2735:
                               issue 2735 is only partly fixed and still a P4
                               bug. Test now reflects this situation.
                             o test system_tests/clients/common/setup:
                               test failed because of not fixed issue 2786. Test
                               now reports a config mail that this issue is not 
                               fixed.
                 Review:     DG

RH-2009-05-12-0: Bugfix:     Hedeby:
                             o move_simhost test did not cleanup the qmaster params
                               (If a simhost is assigned to a GE service the
                               global qmaster parameter SIM_HOSTS is set to true)
                             o file_permission: analyze_directory script accepts
                               only relative pathnames in the ingore_path list 
                 Belongs to: RH-2009-05-11-0 and RH-2009-05-05-0
                 Review:     TB

TB-2009-05-12-0: Bugfix:     Hedeby:
                             check for issue 640 breaks file_permissions test
                 Belongs to: RH-2009-05-06-0
                 Review:     RH

CR-2009-05-12-0: Bugfix:     o job_environment test:
                                test now supports also linux platform